# PhysicsEngine

./: README.md
CoreConcepts/: collisonDetect.cpp  motionDynamics.cpp  rigidBody.cpp
CoreEngine/: .gitignore  CMakeLists.txt
CoreEngine/src/: main.cpp
CoreEngine/src/engine/: engine.cpp  engine.h  window.cpp  window.h
CoreEngine/src/renderer/: renderer.cpp  renderer.h
